# Observatorio_aguas

./: .env.example  README.md  docker-compose.yml  setup.sh
backend/: .env  Dockerfile  README.md  database.py  main.py  observatorio_aguas.db  pyproject.toml  requirements.txt  run.py
observatorio-aguas/: .eslintrc.json  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.js
observatorio-aguas/public/: mapa-simple.html
observatorio-aguas/src/: App.css  App.jsx  index.css
